Sat Mar  7 20:20:53 1998  Tim Janik  <timj@gimp.org>

	* gtk/gtkobject.c:
 	(gtk_object_check_cast):
	(gtk_object_check_class_cast): 
 	made the object/class cast checks much more descriptive, based on
 	gtk-draco-980305-2.patch.gz and gtk-draco-980306-1.patch.gz but
	optimized for common code path.

	* gtk/gtkpreview.c: added a few extra checks for the visual
 	(gtk-draco-980305-0.patch.gz).

	* gdk/gdk.c (gdk_signal): abort() on a signal if G_ENABLE_DEBUG
 	  is defined, so we dump core (gtk-draco-980305-0.patch.gz).

Sat Mar  7 01:07:24 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/gtkrange.c (gtk_range_expose): Fixed the vscrollbar
	  flickering problem, by checking the area on expose events.
	  (There was a hscrollbar flickering problem as well, it
	   just wasn't very noticeable)

Fri Mar  6 21:30:05 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/gtkeditable.c: Disallow pasting into non-editable
	  widgets.

	* gtk/gtktext.[ch]: 

	  -Added scrolling when dragging the selection
	   paste the top/bottom.

	  -Fix some of the problems with displaying the selection
	   state before mouse release.

	  -Disallow pasting into non-editable widgets

	  -Fixed segfault when changing window size

	  -Update the cursor correctly when switching between
	   editable and non-editable

	* testgtk.c: Added a toggle button for editability for
	  the text widget. 

Fri Mar  6 14:47:33 PST 1998 Shawn T. Amundson <amundson@gimp.org>

        * Applied gtk-matsu-980205-0 (oops, should be 980305)
	  gdk/gdkinputcommon.h: return NULL if device is not ready
          gtk/gtkwindow.c: check for GDK_ISO_Left_Tab

Fri Mar  6 13:17:58 1998  Marc Ewing  <marc@.redhat.com>

	* gtk/gtkclist.c (real_select_row, real_unselect_row): 
	  fix selection bugs

Thu Mar  5 20:41:27 1998  Ian Main  <imain@gnu.org>

	* gtk/gtkfilesel.c: Added
	  gtk_file_selection_show_fileop_buttons(GtkFileSelection *fs), and
	  gtk_file_selection_hide_fileop_buttons(GtkFileSelection *fs).